Create URI by passing in string